ItemTree annotations: miscellaneous fixes (#5232)
- disable context menu on collapsible-sections of annotations in `itemPane`
- fix `arrowRight`/`arrowLeft` being able to expand/collapse annotation sections when they are focused
- set proper aria-label and aria-description on annotation cards
- fix misaligned annotation icons

Fixes: #5231
Fixes: #5234
Fixes: #5240

--- a/scss/components/_item-tree.scss
+++ b/scss/components/_item-tree.scss
@@ -247,7 +247,7 @@
 				}
 			}
 			&.tight .cell {
-				padding: 0 2px;
+				padding: 0 2px 0 0;
 			}
 		}
 		
